# CAN-Control-Odrive

./: .gitignore  README.md  requirements.txt
ginkgo_tools/: README.md  __init__.py  ginkgo_motor_tester.py  odrive_ginkgo.py  position_step_test.py  read_encoder_once.py  telemetry_monitor.py
ros2_ws/src/ginkgo_odrive_bridge/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/ginkgo_odrive_bridge/Python_USB_CAN_Test_64bits/: ControlCAN.py  ErrorType.py
ros2_ws/src/ginkgo_odrive_bridge/Python_USB_CAN_Test_64bits/ginkgo_can/: __init__.py  bus.py  odrive.py
ros2_ws/src/ginkgo_odrive_bridge/Python_USB_CAN_Test_64bits/lib/linux/: README.md
ros2_ws/src/ginkgo_odrive_bridge/Python_USB_CAN_Test_64bits/lib/windows/32bit/: Ginkgo_Driver.lib
ros2_ws/src/ginkgo_odrive_bridge/Python_USB_CAN_Test_64bits/lib/windows/64bit/: Ginkgo_Driver.lib  libusb0.dll.x86.bak
ros2_ws/src/ginkgo_odrive_bridge/Python_USB_CAN_Test_64bits/lib/windows/header/: Control1Wire.h  ControlADC.h  ControlBoot.h  ControlCAN.h  ControlCNT.h  ControlDAC.h  ControlDigRF.h  ControlGPIO.h  ControlI2C.h  ControlPMBus.h  ControlPWM.h  ControlSDI.h  ControlSMBus.h  ControlSPI.h  ControlTest.h  ControlUART.h
ros2_ws/src/ginkgo_odrive_bridge/config/: joint_state_bridge.yaml
ros2_ws/src/ginkgo_odrive_bridge/ginkgo_odrive_bridge/: __init__.py  joint_state_bridge.py
ros2_ws/src/ginkgo_odrive_bridge/launch/: joint_state_bridge.launch.py
ros2_ws/src/ginkgo_odrive_bridge/resource/: ginkgo_odrive_bridge
