<?xml version="1.0"?>
<package format="3">
  <name>ginkgo_odrive_bridge</name>
  <version>0.1.0</version>
  <description>ROS 2 joint-state bridge for ODrive over a Ginkgo USB-CAN adapter.</description>

  <maintainer email="gerardo@example.com">Gerardo</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
